cmake_minimum_required(VERSION 3.15)
project(http_server)
set(TARGET http_server)
set(CMAKE_CXX_STANDARD 14)
set(TARGET http_server)
include_directories("${PROJECT_SOURCE_DIR}/src/server")
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src" SRC_LIST)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/server" SRC_LIST)
add_executable(${TARGET} ${SRC_LIST})
target_link_libraries(${TARGET} -lst  -pthread -lssl -static)